<resources>
    <string name="app_name">SimRec</string>

    <!--MainActivity-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tab_main_pswd">Password</string>
    <string name="tab_main_note">Note</string>
    <string name="tab_main_pay">Pay</string>
    <string name="msg_dialog_master_not_set">Your master password have not been set,do you want to set it now?</string>
    <string name="action_menu_sort">Sort</string>
    <string name="menu_drawer_password">Password</string>
    <string name="menu_drawer_note">Note</string>
    <string name="menu_drawer_pay">Pay</string>

    <!--MasterTypeActivity-->
    <string name="title_activity_master_type">Choose Lock Type</string>
    <string name="title_master_type_tips">Please select a way to set master password!</string>
    <string name="btn_master_type_grid">Grid Password（Just Like IOS）</string>
    <string name="btn_master_type_pattern">Pattern Password</string>
    <string name="btn_master_type_text">Text Password</string>
    <string name="title_dialog_no_fingerprint">No Fingerprint</string>
    <string name="msg_dialog_no_fingerprint">No fingerprint saved in your device,please add at least one,add it now?</string>
    <string name="title_dialog_keyguard_notsecure">Keyguard Not Secure</string>
    <string name="msg_dialog_keyguard_notsecure">Your keyguard is not secure,set it now?</string>
    <string name="title_dialog_not_support">Fingerprint Not Support</string>
    <string name="msg_dialog_not_support">Your device does not support fingerprint</string>
    <string name="msg_dialog_validate">Please put your finger on the fingerprint sensor</string>
    <string name="fingerprint_validate_success">Fingerprint validate success</string>
    <string name="fingerprint_validate_failed">Fingerprint validate failed</string>

    <!--GridPassActivity-->
    <string name="title_activity_grid_pass">Set Grid Password</string>
    <string name="tips_grid_pass_first_input">Please input your password</string>
    <string name="tips_grid_pass_confirm_input">Please input again</string>
    <string name="cb_grid_pass_show">Show Password</string>
    <string name="action_menu_reset">Reset</string>
    <string name="action_menu_fingerprint">Fingerprint</string>
    <string name="title_dialog_fingerprint">Unlock</string>
    <string name="error_pass_length">Length of password is illegal</string>

    <!--GridUnLockActivity-->
    <string name="title_activity_grid_unlock">Unlock</string>
    <string name="tips_grid_unlock">Please input your password to unlock</string>

    <!--DefaultCatActivity-->
    <string name="title_activity_default_cat">Select A Category</string>
    <string name="action_menu_skip">SKIP</string>

    <!--PswdNewActivity-->
    <string name="title_activity_pswd_new">New Password</string>
    <string name="hint_pswd_new_title">Title</string>
    <string name="hint_pswd_new_account">Account</string>
    <string name="hint_pswd_new_password">Password</string>
    <string name="hint_pswd_new_website">Website</string>
    <string name="hint_pswd_new_remark">Remark</string>
    <string name="title_pswd_new_exitwithoutsave">Save Change?</string>
    <string name="msg_pswd_new_exitwithoutsave">We find that you edited something on the UI,do you want to save change?</string>
    <string name="action_menu_done">DONE</string>
    <string name="action_menu_cat">CATEGORY</string>
    <string name="error_pswd_new_titleaccount_null">The title and account cannot be empty at the same time</string>
    <string name="error_pswd_new_password_null">The password cannot be empty</string>
    <string name="msg_pswd_new_category_change">We find that you changed the category,do you want to change the value of title and website EditText?</string>

    <!--CategoryOptionActivity-->
    <string name="title_activity_category_option">Select A Category</string>
    <string name="action_menu_add">New Category</string>
    <string name="hint_category_options_title">Title</string>
    <string name="hint_category_options_url">Website URL</string>
    <string name="hint_category_options_iconurl">Icon Url</string>
    <string name="title_dialog_add">New Category</string>
    <string name="error_category_options_empty_title">Title cannot be empty</string>
    <string name="error_category_already_exists">Category already exists</string>

    <!-- PassCatDetailActivity -->
    <string name="title_activity_passcat_detail">Category Detail</string>
    <string name="title_dialog_delete">Delete</string>
    <string name="msg_dialog_delete">Do you also want to delete all passwords under this category?If you choose YES,all passwords will be deleted,else if you choose NO,all passwords will move to the Others category.</string>
    <string name="error_delete_cat_null">Error,null category</string>
    <string name="title_dialog_edit">Edit Category</string>
    <string name="error_delete_cat_default">Error,default category cannot be deleted</string>
    <string name="error_edit_null_cat">Category cannot be null</string>

    <!--TextPassActivity-->
    <string name="title_activity_text_pass">Set Text Password</string>
    <string name="hint_text_pass_password">Password</string>
    <string name="hint_text_pass_confirm">Confirm</string>
    <string name="btn_text_pass_ok">OK</string>
    <string name="error_password_length">length must between 4 and 128</string>
    <string name="error_two_input_notequal">two input not equal</string>

    <!--PatternPassActivity-->
    <string name="title_activity_pattern_pass">Set Pattern Password</string>
    <string name="tips_pattern_set_first">Please Draw Your Pattern</string>
    <string name="tips_pattern_set_second">Please Draw Again</string>
    <string name="tips_pattern_set_length_error">Please Connect At Least 4 dots</string>
    <string name="tips_pattern_set_not_equal">Two Entries Do Not Match</string>

    <!--PatternUnlockActivity-->
    <string name="title_activity_pattern_unlock">Unlock Pattern</string>
    <string name="tips_pattern_unlock">Please Draw Your Pattern</string>
    <string name="tips_pattern_unlock_length_error">Please Connect At Least 4 dots</string>
    <string name="tips_pattern_unlock_error">Pattern Not Match</string>

    <!--TextUnlockActivity-->
    <string name="title_activity_text_unlock">Text Unlock</string>
    <string name="hint_text_unlock_password">Password</string>
    <string name="btn_text_unlock_submit">UnLock</string>
    <string name="error_text_unlock_length">Password length must between 4 and 128</string>

    <!--PassDetailActivity-->
    <string name="msg_pass_detail_delete">Are you sure to delete this password?</string>

    <!--NoteCreateActivity-->
    <string name="title_activity_note_create">Note Edit</string>
    <string name="hint_note_create_title">Title</string>
    <string name="hint_note_create_content">Content</string>
    <string name="hint_note_create_link_show">Link Title</string>
    <string name="hint_note_create_link_url">Link URL</string>
    <string name="title_dialog_new_link">New Link</string>
    <string name="note_create_link_url">https://</string>
    <string name="title_dialog_table">Table Setting</string>
    <string name="hint_note_create_rows">Rows</string>
    <string name="hint_note_create_columns">Columns</string>
    <string name="action_menu_label">Label</string>
    <string name="action_menu_color">Color</string>
    <string name="action_menu_switch">Switch Mode</string>
    <string name="action_menu_share">Share</string>
    <string name="error_note_update_null_note">Can not update a null Note</string>
    <string name="action_menu_share_fb">Share To Facebook</string>
    <string name="action_menu_share_gplus">Share To Google+</string>
    <string name="action_menu_share_others">Others</string>

    <!--LabelOptionActivity-->
    <string name="title_activity_label_option">Choose Labels</string>
    <string name="title_dialog_new_label">New Label</string>
    <string name="hint_dialog_name">Name</string>
    <string name="action_menu_markdown_help">Markdown Help</string>
    <string name="error_note_create_already_exists">Label Already Exists</string>
    <string name="error_label_create_name_empty">Label Name Cannot Be Empty</string>

    <string name="delete_success">Delete success</string>
    <string name="delete_failed">Delete failed</string>
    <string name="update_success">Update Successfully</string>

    <string name="title_select_browser">Please select a browser</string>

    <string name="error_exception_happened">Sorry,some exceptions happened,please try again</string>
    <string name="error_data_tamper">Error,data may be tampered,all data will be clear!!!</string>
    <string name="error_unknown_exception_happen">Sorry,Unknown exception happened</string>
    <string name="error_pass_not_equal">Two input inconsistencies</string>
    <string name="pass_validate_failed">Validate failed</string>
    <string name="error_illegal_request">Illegal request</string>
    <string name="error_size">Result list size cannot above pageSize</string>
    <string name="error_query_failed">Query failed</string>
    <string name="error_time_end_below_start">1970-01-01</string>

    <string name="time_interval_just_now">just now</string>
    <string name="time_interval_seconds_ago">\tseconds ago</string>
    <string name="time_interval_second_ago">\tsecond ago</string>
    <string name="time_interval_minutes_ago">\tminutes ago</string>
    <string name="time_interval_minute_ago">\tminute ago</string>
    <string name="time_interval_hours_ago">\thours ago</string>
    <string name="time_interval_hour_ago">\thour ago</string>
    <string name="time_interval_days_ago">\tdays ago</string>
    <string name="time_interval_day_ago">\tday ago</string>

    <string name="permission_denied">Permission denied</string>

    <string name="copy">COPY</string>

    <string name="empty_title">Empty Title</string>
    <string name="empty_account">Empty Account</string>

    <string name="title_default_category">Others</string>
    <string name="url_default_category">www.example.com</string>
    <string name="iconurl_default_category">https://dn-8l5l1lef.qbox.me/b7d23ca9040714094a13.png</string>

    <string name="action_menu_copy_account">Copy Account</string>
    <string name="action_menu_copy_password">Copy Password</string>
    <string name="action_menu_copy_both">Copy Account and Password</string>
    <string name="action_menu_edit">Edit</string>
    <string name="action_menu_delete">Delete</string>
    <string name="action_menu_search">Search</string>

    <string name="copy_success">Copy Success</string>

    <string name="empty_list">Empty List</string>

    <string name="toast_master_set_successfully">Master password set successfully</string>

    <string name="or_use_fingerprint">Or Use Fingerprint</string>

    <string name="title_dialog_warning">Warning</string>
    <string name="title_dialog_error">Error</string>
    <string name="title_dialog_tips">Tips</string>
    <string name="action_dialog_ok">OK</string>
    <string name="action_dialog_yes">YES</string>
    <string name="action_dialog_no">NO</string>
    <string name="action_dialog_add">ADD</string>
    <string name="action_dialog_cancel">CANCEL</string>
    <string name="action_dialog_getit">OK,I got it</string>
    <string name="action_settings">Settings</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="facebook_app_id">1622699564700755</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Coming Soon!!!</string>

</resources>
